# nuttyverse

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  README.md  curse.txt  flake.nix  index.html  justfile  pnpm-lock.yaml  pnpm-workspace.yaml  test.py  tsconfig.json
api/: bruno.json
app/: .gitignore  index.html  justfile  package.json  tsconfig.json  vite.config.ts  vitest.workspace.ts
blocks/: .dockerignore  .gitignore  .npmrc  .prettierignore  Dockerfile  README.md  flake.nix  jest.config.cjs  jest.setup.ts  justfile  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs  shell.nix  token  tsconfig.json  vite.config.mts  vite.config.ts
bot/: .dockerignore  .env.example  .gitignore  Dockerfile  flake.nix  justfile  package.json  pnpm-lock.yaml  shell.nix  tsconfig.json
city/: .env.example  .gitignore  astro.config.mjs  flake.nix  justfile  package.json  pnpm-lock.yaml  prettier.config.cjs  shell.nix  tsconfig.json
db/: .env.example  schema.sql
fonts/: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  justfile  shell.nix
nut/: .env.example  .gitignore  Cargo.toml  Dockerfile  justfile
nut/src/: api.rs  auth.rs  config.rs  main.rs
ops/: README.md  flake.nix
scores/: wonderful-moments-in-narin.ly  wonderful-moments-in-narin.midi
space/: shell.nix
sss/: .env.example  README.md  flake.nix  justfile  pyproject.toml
sss/client/: __init__.py  connections.py  errors.py  models.py
sss/processing/: __init__.py  images.py  models.py  videos.py
sss/s3/: __init__.py  exceptions.py
sss/sss/: __init__.py  looking_glass.py
(+542 files in other folders)
