[package]
name = "nut"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7"
axum-keycloak-auth = "0.5.0"
futures = "0.3"
http = "1.1"
jsonwebtoken = "9"
redis = { version = "0.26", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs"] }
typed-builder = "0.20"
urlencoding = "2.1"
