[tool.poetry]
name = "sss"
version = "0.1.0"
description = "Spaceship Storage"
authors = ["nuttyversal <mail@nuttyver.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
minio = "^7.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
