[tool.poetry]
name = "sss"
version = "0.1.0"
description = "Spaceship Storage"
authors = ["nuttyversal <mail@nuttyver.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
minio = "^7.2.7"
psycopg2-binary = "^2.9.9"
uuid-utils = "^0.7.0"
pillow = "^10.3.0"
pillow-heif = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
